--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <a href="#!" class="logo">Kelvin</a>
 
-                <nav id="nav" class="nav">
+                <nav id="nav" class="nav open ">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#!" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="#!" class="nav-link">Works</a></li>
